--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,19 @@
   --logo-studio-color: #2e2f42;
 }
 
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
@@ -13,6 +26,7 @@ body {
 
 .list {
   list-style: none;
+  display: flex;
 }
 
 .link {
@@ -27,7 +41,24 @@ body {
   cursor: pointer;
 }
 
+.container {
+  width: 1128px;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+}
+
 /* ========HEADER========== */
+
+.header-border{
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.container.header {
+  display: flex;
+  min-height: 72px;
+   
+}
 
 .logo {
   font-family: 'Raleway', sans-serif;
@@ -58,6 +89,26 @@ body {
   color: var(--nav-link-text-color);
 }
 
+.list.list-nav li:not(:first-child) {
+  margin-left: 40px;
+}
+
+.list.list-nav {
+  margin-left: 77px;
+}
+
+.link.nav {
+  display: block;
+}
+
+.list.list-contacts li:not(:first-child) {
+  margin-left: 40px;
+}
+
+.list.list-contacts {
+  margin-left: auto;
+}
+
 .nav:visited {
   color: #434455;
 }
@@ -86,15 +137,19 @@ body {
 
 .hero-section {
   background-color: #2e2f42;
+  text-align: center;
+
 }
 
 .hero-text {
   font-weight: 600;
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   letter-spacing: 0.02em;
   color: #ffffff;
+
+  padding-top: 192px;
+  display: block;
 }
 
 .hero-button {
@@ -105,9 +160,12 @@ body {
   font-weight: 600;
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
   letter-spacing: 0.04em;
   color: #ffffff;
+
+  margin-top: 48px;
+  margin-bottom: 192px;
+  display: inline-block;
 }
 
 .hero-button:hover,
@@ -122,6 +180,31 @@ body {
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
+/* =================== Section 2 ==================================*/
+
+.section.container {
+  padding-top: 120px;
+}
+
+.header-section-hidden {
+  display: none;
+}
+
+
+.list.section li:not(:last-child) {
+  margin-right: 24px;
+}
+
+
+.list.section {
+  display: flex;
+}
+
+.container-section-3 {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 h2 {
   font-weight: 600;
   font-size: 36px;
@@ -131,6 +214,19 @@ h2 {
   color: #2e2f42;
 }
 
+.header-section {
+  text-align: center;
+}
+
+.header-section {
+  padding-bottom: 72px;
+}
+
+.list.section img {
+  display: block;
+}
+
+
 .item-heading {
   font-weight: 600;
   font-size: 20px;
@@ -139,10 +235,18 @@ h2 {
   color: #2e2f42;
 }
 
+/* ===============================Team============================ */
+
+.team-subscription-item {
+padding: 32px 15px;
+text-align: center;
+}
+
 .subscription {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding-top: 8px;
 }
 
 .section-team {
@@ -151,6 +255,8 @@ h2 {
 
 .team-card {
     background-color: #FFFFFF;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+border-radius: 0px 0px 4px 4px;
 }
 
 .button-portfolio {
@@ -180,6 +286,34 @@ h2 {
   color: #ffffff;
 }
 
+/* ================================Page products===================== */
+
+.list.container.button-products {
+  padding-top: 96px;
+  padding-bottom: 72px;
+  justify-content: center;
+}
+
+.container .products-grid {
+  padding-bottom: 120px;
+}
+
+.products-grid {
+  flex-wrap: wrap;
+}
+
+.products-grid li:not(:nth-child(3n)) {
+  margin-right: 24px;
+}
+
+.products-grid li:not(:nth-last-child(-n+3)) {
+  margin-bottom: 48px;
+}
+
+.products-subscription {
+  padding: 32px 16px;
+}
+
 /* ===========FOOTER============== */
 
 .footer {
@@ -191,4 +325,9 @@ h2 {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #e7e9fc;
+  padding-top: 18px;
+}
+
+.container-footer {
+  padding: 100px 0px;
 }
