--- a/css/styles.css
+++ b/css/styles.css
@@ -314,6 +314,17 @@ border-radius: 0px 0px 4px 4px;
   padding: 32px 16px;
 }
 
+.product-card {
+  outline: 0.5px solid #F4F4FD;
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.product-card:hover {
+  outline: 0.5px solid #F4F4FD;
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+
 /* ===========FOOTER============== */
 
 .footer {
