--- a/css/styles.css
+++ b/css/styles.css
@@ -311,7 +311,7 @@ h2 {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-  border: none;
+  border: 1px solid #4d5ae5;
   font-weight: 600;
   font-size: 16px;
   line-height: 1.5;
